Tweaks to address issues in device testing.
- Bump up font weight for devices that tend to
  render fonts on the thinner side.
- Darken borders that disappeared on tablets.
- Adjust widths on elements that got clipped on
  super small resolutions.
- Remove unnecessary css files.
- Add sliding animation to navigation… for now.

--- a/_sass/_screen.scss
+++ b/_sass/_screen.scss
@@ -120,7 +120,7 @@ header {
     }
     
     img {
-        height: rhythm(4);
+        height: rhythm(2.5);
         width: auto;
     }
 }
@@ -396,7 +396,7 @@ nav ul {
     
     h1 { 
         margin: 0;
-        border-color: rgba(0,0,0,.03);
+        border-color: #e7e7e7;
         padding: rhythm(.25) gutter() 0 gutter();
         @include adjust-font-size-to(20px); 
         @include adjust-leading-to(1, $base-font-size);
@@ -414,10 +414,16 @@ nav ul {
     li {
         display: block;
         padding: rhythm(.25) gutter() 0 gutter();
-        border-color: rgba(0,0,0,.03);
+        border-color: #e7e7e7;
         @include trailing-border(1px, .25, $base-font-size, solid);
         
         h2 { margin: 0; }
+        
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
@@ -519,8 +525,8 @@ nav ul {
     }
     
     .page-input {
-        left: 10%;
-        width: 80%;
+        left: 20%;
+        width: 60%;
         
         form {
             padding: rhythm(.5) 0;
@@ -535,13 +541,13 @@ nav ul {
     }
     
     .pagination_previous {
-        width: 10%;
-        left: 3%;
+        width: 20%;
+        left: 0;
     }
     
     .pagination_next {
-        left: 87%;
-        width: 10%;
+        left: 80%;
+        width: 20%;
         
         a { background-color: #e7e7e7; }
     }
@@ -864,23 +870,23 @@ nav ul {
     }
 
     .pagination {    
-        width: 75%;
+        width: 100%;
         background-color: #fff;
         margin: 0;
-        overflow: auto;
         padding-left: gutter(6);
         border-color: #e7e7e7;
         float: left;
+        @include trailing-border(1px, 0, $base-font-size, solid);
         
         & + ul {
             margin: 0;
             font-size: 0;
             float: right;
-            width: 25%;
+            width: 100%;
             background-color: #fff;
             position: relative;
             border-left: 1px solid #e7e7e7;
-
+            @include box-shadow(rgba(0,0,0,.1) 0 5px 10px);
             
             li {
                 width: 50%;
@@ -921,10 +927,10 @@ nav ul {
 
 .persons.images { 
     text-align: center;
-    @include padding-leader();
+    @include padding-leader(3);
 
     .person { 
-        width: percentage(1/4); 
+        width: percentage(1/2); 
         display: inline-block;
         vertical-align: top;
         margin: 2%;
@@ -1292,7 +1298,7 @@ nav ul {
         }
     
         img {
-            max-width: 100%; 
+            width: 100%; 
             height: auto;
             vertical-align: bottom;
         }
