--- a/_sass/_screen_40em.scss
+++ b/_sass/_screen_40em.scss
@@ -360,6 +360,10 @@ header {
     }
 }
 
+.persons.images .person {
+    width: 25%;
+}
+
 .persons.images .image {
     width: 95px;
     -webkit-border-radius: 85px/130px;
