--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -4,6 +4,10 @@
   @import 'screen'
 }
 
+@media screen and (min-width: 15em) {
+  @import 'screen_15em';
+}
+
 @media screen and (min-width: 40em) {
   @import 'screen_40em';
 }
